--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -8,4 +8,4 @@ $light-blue: #69bec7;
 
 // Media queries
 $mobile: 750px;
-$desktop: 1200px;
+$desktop: 1250px;
